--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>LHT Feasibility • Simple Dashboard (Mobile‑first)</title>
+  <title>LHT Feasibility • Daily Updates</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     :root{
@@ -111,3 +111,4 @@
   </script>
 </body>
 </html>
+
