--- a/index.html
+++ b/index.html
@@ -78,22 +78,22 @@
       <div class="breakdown">
         <div class="row align-items-center py-1">
           <div class="col bk-label">EWT</div>
-          <div class="col-auto bk-value" id="readyEWT">435</div>
+          <div class="col-auto bk-value" id="readyEWT">459</div>
         </div>
         <div class="row align-items-center py-1">
           <div class="col bk-label">OTM</div>
-          <div class="col-auto bk-value" id="readyOTM">266</div>
+          <div class="col-auto bk-value" id="readyOTM">227</div>
         </div>
         <div class="row align-items-center py-1">
           <div class="col bk-label">EWT from OTM</div>
-          <div class="col-auto bk-value" id="readyEWTOTM">11</div>
+          <div class="col-auto bk-value" id="readyEWTOTM">40</div>
         </div>
       </div>
     </div>
 
     <!-- For Skip Tracing -->
     <div class="kpi skip collapsed" data-bs-toggle="collapse" data-bs-target="#cSkip" aria-expanded="false">
-      <div class="label">Properties for Skip Tracing</div>
+      <div class="label">Total Properties Skipped Traced</div>
       <div id="kpiSkip" class="value">0</div>
       <span class="chev">▾</span>
     </div>
@@ -101,38 +101,34 @@
       <div class="breakdown">
         <div class="row align-items-center py-1">
           <div class="col bk-label">EWT</div>
-          <div class="col-auto bk-value" id="skipEWT">0</div>
+          <div class="col-auto bk-value" id="skipEWT">459</div>
         </div>
         <div class="row align-items-center py-1">
           <div class="col bk-label">OTM</div>
-          <div class="col-auto bk-value" id="skipOTM">0</div>
+          <div class="col-auto bk-value" id="skipOTM">227</div>
         </div>
         <div class="row align-items-center py-1">
           <div class="col bk-label">EWT from OTM</div>
-          <div class="col-auto bk-value" id="skipEWTOTM">0</div>
+          <div class="col-auto bk-value" id="skipEWTOTM">40</div>
         </div>
       </div>
     </div>
 
     <!-- Total Explored (Today) -->
     <div class="kpi explored collapsed" data-bs-toggle="collapse" data-bs-target="#cExplored" aria-expanded="false">
-      <div class="label">Total Properties Explored (Today)</div>
-      <div id="kpiExplored" class="value">0</div>
+      <div class="label">Total Properties Explored</div>
+      <div id="kpiExplored" class="value">2407</div>
       <span class="chev">▾</span>
     </div>
     <div id="cExplored" class="collapse">
       <div class="breakdown">
         <div class="row align-items-center py-1">
-          <div class="col bk-label">EWT</div>
-          <div class="col-auto bk-value" id="expEWT">0</div>
+          <div class="col bk-label">Comparison Studies Done</div>
+          <div class="col-auto bk-value" id="expEWT">540</div>
         </div>
         <div class="row align-items-center py-1">
-          <div class="col bk-label">OTM</div>
-          <div class="col-auto bk-value" id="expOTM">0</div>
-        </div>
-        <div class="row align-items-center py-1">
-          <div class="col bk-label">EWT from OTM</div>
-          <div class="col-auto bk-value" id="expEWTOTM">0</div>
+          <div class="col bk-label">Tier-1 (T1) Properties Identified on Land.ID</div>
+          <div class="col-auto bk-value" id="expOTM">1507</div>
         </div>
       </div>
     </div>
@@ -219,6 +215,7 @@
   </script>
 </body>
 </html>
+
 
 
 
